--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.3.0",
     "node-fetch": "^3.3.2",
     "npm": "^10.4.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
